<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context=".ui.wallet.WalletFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"

            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/wallet_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.423"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rate_value"
                app:layout_constraintVertical_bias="0.168" />

            <TextView
                android:id="@+id/rate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_rate"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rate_icon"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333"
                tools:text="60 BTC" />

            <ImageView
                android:id="@+id/rate_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="indicates_rate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rate_value"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333"
                tools:src="@drawable/baseline_arrow_upward_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.7">

            <LinearLayout
                android:id="@+id/loading_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_default"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility = "gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/gold" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/row_padding"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_small"
                    tools:text="@string/message_loading" />

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fluctuationsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                tools:visibility = "visible"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">


                <TextView
                    android:id="@+id/start_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    android:text="@string/start_rate"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintBottom_toTopOf="@+id/end_rate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/start_rate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:textAlignment="textEnd"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Value" />


                <TextView
                    android:id="@+id/end_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:text="@string/end_rate"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_rate" />


                <TextView
                    android:id="@+id/end_rate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_rate_value"
                    tools:text="Value" />

                <TextView
                    android:id="@+id/change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:text="@string/change_value"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/end_rate" />


                <TextView
                    android:id="@+id/change_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/end_rate_value"
                    tools:text="Value" />

                <TextView
                    android:id="@+id/change_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:text="@string/change_percentage_value"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change" />

                <TextView
                    android:id="@+id/change_percentage_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:textAlignment="textEnd"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_value"
                    tools:text="Value" />


                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:text="@string/start_date"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_percentage" />

                <TextView
                    android:id="@+id/start_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:textAlignment="textEnd"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_percentage_value"
                    tools:text="Value" />


                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:text="@string/end_date"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_list_item_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_date" />

                <TextView
                    android:id="@+id/end_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:textAlignment="textEnd"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_date_value"
                    tools:text="Value" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>